# WARNING: head commit changed in the meantime
190: Create a Compound/Mix method in Quantity or other API element?

Task-Url: https://github.com/unitsofmeasurement/unit-api/issues/issues/190